Synchronize PicoMODA9 device trees with other F&S boards
- Change pixel format from BGR666 to RGB666 for LCD on PicoMODA9
  Dual/Quad, too, like on PicoMODA9 Solo/DualLite.
- On armStoneA9, disable I2C_C. This port breaks armStone standard and
  should not be available by default.
- Always use 16 brightness levels for backlight.
- Delete unused settings.
- Add tabs for iomuxc values.
- Fix typos in comments.

--- a/arch/arm/boot/dts/armstonea9dl.dts
+++ b/arch/arm/boot/dts/armstonea9dl.dts
@@ -155,10 +155,10 @@ wvga {					\
 /* SD-CARD - SD_A is micro SD */
 #define CONFIG_ARMSTONEA9_SD_A
 
-/* I2C */
+/* I2C (I2C_C breaks armStone standard and is disabled by default) */
 #define CONFIG_ARMSTONEA9_I2C_A
 #define CONFIG_ARMSTONEA9_I2C_B
-#define CONFIG_ARMSTONEA9_I2C_C
+//#define CONFIG_ARMSTONEA9_I2C_C
 
 /* SPI */
 #define CONFIG_ARMSTONEA9_SPI_A
