--- a/arch/arm/boot/dts/armstonea9r2q.dts
+++ b/arch/arm/boot/dts/armstonea9r2q.dts
@@ -46,7 +46,7 @@
  * Define this if you only want to use one IPU. This means that you can use
  * at most two displays and only the first display can have a video overlay.
  * If you want to have more than two displays or if you want to have two
- * displays with a video oberlay each, then you need to use both IPUs of the
+ * displays with a video overlay each, then you need to use both IPUs of the
  * i.MX6 Dual/Quad CPU.
  */
 //#define CONFIG_ARMSTONEA9R2_USE_ONE_IPU
