Add "q" or "dl" to board_name in bdinfo
Like in U-Boot, the board_name shown in /sys/bdinfo should show the
actual CPU type by appending "q" or "dl" to the base name. So set
this entry in the q or dl dts file, not in the common qdl dtsi include.

--- a/arch/arm/boot/dts/armstonea9dl.dts
+++ b/arch/arm/boot/dts/armstonea9dl.dts
@@ -176,6 +176,10 @@ wvga {					\
 	compatible = "fsl,imx6dl-armstonea9", "fsl,imx6dl";
 };
 
+&bdinfo {
+	board_name = "armstonea9dl";
+};
+
 /* i.MX6 Solo and DualLite have a PXP engine */
 &pxp {
 	status = "okay";
