--- a/arch/arm/boot/dts/armstonea9r2qdl.dtsi
+++ b/arch/arm/boot/dts/armstonea9r2qdl.dtsi
@@ -203,7 +203,7 @@
 	};
 
 	/* F&S board information */
-	bdinfo {
+	bdinfo: bdinfo {
 		compatible = "bdinfo";
 		board_name = "armstonea9r2";
 		ecc_strength = "8";
