--- a/arch/arm/boot/dts/picomoda9qdl.dtsi
+++ b/arch/arm/boot/dts/picomoda9qdl.dtsi
@@ -281,7 +281,7 @@
 	};
 
 	/* F&S board information */
-	bdinfo {
+	bdinfo: bdinfo {
 		compatible = "bdinfo";
 		board_name = "picomoda9";
 		ecc_strength = "40";
