--- a/arch/arm/boot/dts/picomoda9dl.dts
+++ b/arch/arm/boot/dts/picomoda9dl.dts
@@ -146,6 +146,10 @@ wvga {					\
 	compatible = "fsl,imx6dl-picomoda9", "fsl,imx6dl";
 };
 
+&bdinfo {
+	board_name = "picomoda9dl";
+};
+
 /* i.MX6 Solo and DualLite have a PXP engine */
 &pxp {
 	status = "okay";
