--- a/arch/arm/configs/fsimx6sx_android_defconfig
+++ b/arch/arm/configs/fsimx6sx_android_defconfig
@@ -2635,6 +2635,7 @@ CONFIG_SND_SOC_IMX_CS42888=y
 CONFIG_SND_SOC_IMX_WM8962=y
 CONFIG_SND_SOC_IMX_WM8962_ANDROID=y
 CONFIG_SND_SOC_IMX_SGTL5000=y
+CONFIG_HID_MULTITOUCH=y
 # CONFIG_SND_SOC_IMX_MQS is not set
 # CONFIG_SND_SOC_IMX_SPDIF is not set
 # CONFIG_SND_SOC_IMX_MC13783 is not set
