Improve efusa9 device tree for emmc support
- Add emmc support as default in the efusa9 device trees
- Change pinctrl settings for emmc

--- a/arch/arm/boot/dts/efusa9q.dts
+++ b/arch/arm/boot/dts/efusa9q.dts
@@ -189,7 +189,7 @@ wvga {					\
 #define CONFIG_EFUSA9_SATA
 
 /* EMMC */
-//#define CONFIG_EFUSA9_EMMC
+#define CONFIG_EFUSA9_EMMC
 
 /* I2C */
 #define CONFIG_EFUSA9_I2C_A
