--- a/arch/arm/boot/dts/efusa9dl.dts
+++ b/arch/arm/boot/dts/efusa9dl.dts
@@ -166,7 +166,7 @@ wvga {					\
 #define CONFIG_EFUSA9_SD_B
 
 /* EMMC */
-//#define CONFIG_EFUSA9_EMMC
+#define CONFIG_EFUSA9_EMMC
 
 /* I2C */
 #define CONFIG_EFUSA9_I2C_A
