--- a/arch/arm/boot/dts/efusa7ul.dts
+++ b/arch/arm/boot/dts/efusa7ul.dts
@@ -10,6 +10,9 @@
 #define CONFIG_EFUSA7UL_NAND
 //#define CONFIG_EFUSA7UL_SD_A_CDWP
 
+#define CONFIG_EFUSA7UL_ETH0
+#define CONFIG_EFUSA7UL_ETH1
+
 /* Please select only one of the following touch devices. Make sure that the
    corresponding touchscreen driver is activated in the kernel */
 //#define CONFIG_EFUSA7UL_4WTOUCH_SX8655_ONBOARD
@@ -208,11 +211,13 @@
 	assigned-clock-rates = <786432000>, <0>, <12288000>;
 };
 
+#ifdef CONFIG_EFUSA7UL_ETH0
 &fec1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_enet1>;
 	phy-mode = "rmii";
 	phy-handle = <&ethphy0>;
+	phy-supply = <&reg_vref_3v3>;
 	fsl,ref-clock-out;
 	status = "okay";
 
@@ -225,21 +230,40 @@
 			reg = <0>;
 		};
 
+#ifdef CONFIG_EFUSA7UL_ETH1
 		ethphy1: ethernet-phy@3 {
 			compatible = "ethernet-phy-ieee802.3-c22";
 			reg = <3>;
 		};
+#endif
 	};
 };
+#endif /* CONFIG_EFUSA7UL_ETH0 */
 
+#ifdef CONFIG_EFUSA7UL_ETH1
 &fec2 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_enet2>;
 	phy-mode = "rmii";
 	phy-handle = <&ethphy1>;
+	phy-supply = <&reg_vref_3v3>;
 	fsl,ref-clock-out;
-//###	status = "okay";
+	status = "okay";
+
+#ifndef CONFIG_EFUSA7UL_ETH0
+	/* If only ETH1 is available, use MDIO bus of FEC2 */
+	mdio {
+		#address-cells = <1>;
+		#size-cells = <0>;
+
+		ethphy1: ethernet-phy@3 {
+			compatible = "ethernet-phy-ieee802.3-c22";
+			reg = <3>;
+		};
+	};
+#endif
 };
+#endif /* CONFIG_EFUSA7UL_ETH1 */
 
 &flexcan1 {
 	pinctrl-names = "default";
@@ -678,13 +702,14 @@
 			>;
 		};
 
+#ifdef CONFIG_EFUSA7UL_ETH0
 		pinctrl_enet1: enet1grp {
 			fsl,pins = <
 				/* MDIO */
 				MX6UL_PAD_GPIO1_IO07__ENET1_MDC		0x0b0e9
 				MX6UL_PAD_GPIO1_IO06__ENET1_MDIO	0x0b831
 
-				/* FEC0 */
+				/* FEC1 */
 				MX6UL_PAD_ENET1_RX_EN__ENET1_RX_EN	0x0b0e9
 				MX6UL_PAD_ENET1_RX_ER__ENET1_RX_ER	0x0b0e9
 				MX6UL_PAD_ENET1_RX_DATA0__ENET1_RDATA00	0x0b0e9
@@ -704,9 +729,17 @@
 				   that we trigger in U-Boot already. */
 			>;
 		};
+#endif
 
+#ifdef CONFIG_EFUSA7UL_ETH1
 		pinctrl_enet2: enet2grp {
 			fsl,pins = <
+#ifndef CONFIG_EFUSA7UL_ETH0
+				/* MDIO, only used if FEC1 is not active */
+				MX6UL_PAD_GPIO1_IO07__ENET2_MDC		0x0b0e9
+				MX6UL_PAD_GPIO1_IO06__ENET2_MDIO	0x0b831
+#endif
+				/* FEC2 */
 				MX6UL_PAD_ENET2_RX_EN__ENET2_RX_EN	0x1b0b0
 				MX6UL_PAD_ENET2_RX_ER__ENET2_RX_ER	0x1b0b0
 				MX6UL_PAD_ENET2_RX_DATA0__ENET2_RDATA00	0x1b0b0
@@ -717,6 +750,7 @@
 				MX6UL_PAD_ENET2_TX_CLK__ENET2_REF_CLK2	0x4001b031
 			>;
 		};
+#endif
 
 		pinctrl_flexcan1: flexcan1grp{
 			fsl,pins = <
