[clk-imx6sx] Fix ethernet clock chains in i.MX6SoloX clock tree
The ethernet clock sub-tree showed the following layout (bit numbers
from CCM_ANALOG_PLL_ENETn register, G=gate, D=div)

pll6_bypass -> pll6_enet (G13) -> enet_ref (D1:0)
                               -> enet2_ref (D3:2) -> enet_ref_125m (G20)
                               -> enet_ptp_ref (D) -> enet_ptp_25m (G21)

But in fact the gate on bit 13 (G13) is the clock for ENET1. Which
means that in this configuration activating the clock for ENET2 also
activates the clock for ENET1. This is wrong.

Change the clock tree to look like this:

pll6_bypass -> enet_div (D1:0) -> enet_ref (G13)
            -> enet2_div (D3:2) -> enet2_ref (G20)
            -> enet_ptp_div (D) -> enet_ptp_25m (G21)

This reflects the reality more accurately. Now the clock to each
ENET device and also the 25MHz PTP clock can be switched on and
off individually.

This means we also have to rename some clock names in the device tree
bindings.

    9: IMX6SX_CLK_PLL6_ENET -> IMX6SX_CLK_ENET_DIV
  229: IMX6SX_CLK_ENET_PTP_REF -> IMX6SX_CLK_ENET_PTP_DIV
  230: IMX6SX_CLK_ENET2_REF -> IMX6SX_CLK_ENET2_DIV
  231: IMX6SX_CLK_ENET2_REF_125M -> IMX6SX_CLK_ENET2_REF

The only clock used in imx6sx.dtsi was IMX6SX_CLK_ENET2_REF_125M that
we change to IMX6SX_CLK_ENET2_REF. But the number 231 stays, so binary
device trees (.dtb) should still work.

--- a/arch/arm/boot/dts/imx6sx.dtsi
+++ b/arch/arm/boot/dts/imx6sx.dtsi
@@ -1115,7 +1115,7 @@
 				clocks = <&clks IMX6SX_CLK_ENET>,
 					 <&clks IMX6SX_CLK_ENET_AHB>,
 					 <&clks IMX6SX_CLK_ENET_PTP>,
-					 <&clks IMX6SX_CLK_ENET2_REF_125M>,
+					 <&clks IMX6SX_CLK_ENET2_REF>,
 					 <&clks IMX6SX_CLK_ENET_PTP>;
 				clock-names = "ipg", "ahb", "ptp",
 					      "enet_clk_ref", "enet_out";
